next版 阶段n
